--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
             <div id="formulário">
                 <h1>Login</h1>
                 <p>seja bem-vindo(a) novamente, faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
-                <form action="login-php" method="post"></form>
+                <form action="login-php" method="post" autocomplete="on">
+                    <div class="campo">
+                        
+                        <input type="email" name="login" id="ilogin" placeholder="seu email" autocomplete="email" reqquired maxlength="30">
+                        <label for="ilogin">login</label>
+                    </div>
+                    <div class="campo">
+                        
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="13">
+                        <label for="isenha">senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha</a>
+                </form>
 
             </div>
         </section>
