--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="13">
                         <label for="isenha">senha</label>
                     </div>
-                    <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha</a>
+                    <input type="submit" value="Entrar" id="submit">
+                    <a href="esqueci.html" class="botao">Esqueci a senha</a>
                 </form>
 
             </div>
