--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <form action="login-php" method="post" autocomplete="on">
                     <div class="campo">
                         
-                        <input type="email" name="login" id="ilogin" placeholder="seu email" autocomplete="email" reqquired maxlength="30">
+                        <input type="email" name="login" id="ilogin" placeholder="seu email" autocomplete="email" required maxlength="30">
                         <label for="ilogin">login</label>
                     </div>
                     <div class="campo">
