--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <label for="isenha">senha</label>
                     </div>
                     <input type="submit" value="Entrar" id="submit">
-                    <a href="esqueci.html" id="botao">Esqueci a senha</a>
+                    <a href="esqueci.html" id="botao">esqueci a senha</a>
                 </form>
 
             </div>
